--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -1,10 +1,69 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Blog</title>
+
+    <!-- Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://max  cdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- medium-editor -->
+    <script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+
+    <!-- Custom css -->
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Sedgwick+Ave+Display" rel="stylesheet">
+
+
   </head>
   <body>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-default techfont custom-navbar">
+      <div class="container">
+        <ul>
+          <li><a class="navbar-brand bigbrand" href="{% url post_list %}">My Blog</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="https://www.linkedin.com">Linkedin</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          {% if user.is_authenticated %}
+          <li>
+            <a href="{% url 'post_new' %}">New Post</a>
+            <a href="{% url 'post_draft_list' %}">Draft</a>
+            <a href="{% url 'logout' %}">Log Out</a>
+          </li>
+          <li>
+            <a>Welcome: {{ user.username }}</a>
+          </li>
+            {% else %}
+            <li><a class="nav navbar-right" href="{% url 'login' %}"><span class="glyphicon glyphicon-user"></span></a></li>
+          {% elseif %}
+        </ul>
+      </div>
+    </nav>
+
+    <!-- content block -->
+
+    <div class="content container">
+      <div class="row">
+        <div class="col-md-8">
+          <div class="blog_posts">
+            {% block content}
+            {% endblock %}
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
 
   </body>
 </html>
