--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -7,6 +7,11 @@
 .bigbrand{
   font-size: 1.5em;
 }
+
+.cnterstage{
+  margin-left: auto;
+  margin-right: auto;
+}
 .loader {
   /*position:fixed;
   left:0;
@@ -16,6 +21,7 @@
   filter:hue-rotate(0deg);
   /*background:linear-gradient(45deg,#0f8,#08f);*/
   animation:hue 10000ms infinite linear;
+  color: linear-gradient(45eg, #0f8, #08f);
 
 }
 
