--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -22,7 +22,7 @@
 
 
   </head>
-  <body>
+  <body class="loader">
 
     <!-- Navbar -->
     <nav class="navbar navbar-default techfont custom-navbar">
