templates: finish off temps and minimal styling

--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -25,6 +25,28 @@
 
 }
 
+/*COLOR CHANGER BELOW*/
+.postdate{
+  text-align: center;
+
+}
+
+.posttitle{
+  font-family: 'Russo One', sans-serif;
+  font-size: 3em;
+  text-align: center;
+}
+
+.postcontent{
+  font-family: : 'Montserrat';
+  font-size: 1.5em;
+}
+
+.btn-comment{
+  position: absolute;
+  right: 0px;
+}
+
 @keyframes spinify {
   0% {
     transform: translate(0px,0px);
